--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import "~react-image-gallery/styles/css/image-gallery.css";
 * {
   padding: 0;
   margin: 0;
@@ -8,4 +9,32 @@ html {
   min-height: 100vh;
   background-color: #f6f9fc;
   padding-top: 6rem;
+}
+.Button {
+  display: flex;
+  align-items: center;
+}
+.Button span {
+  margin: 0 5px;
+  font-size: 1.3rem;
+}
+.btn-text {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.4rem;
+  padding: 0.4rem 0.8rem;
+  color: #fff;
+  background: #d23f57;
+  border-radius: 5px;
+}
+
+.Button .btn-icon {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 2.3rem;
+  color: #d23f57;
+  background: none;
+  border-radius: 5px;
 }
