--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+a {
+  color: black;
+  text-decoration: none;
+}
 html {
   min-height: 100vh;
   background-color: #f6f9fc;
