--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ html {
   background: #d23f57;
   border-radius: 5px;
 }
+.Button .btn-icon:disabled,
+.btn-text:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
 
 .Button .btn-icon {
   border: none;
